--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,15 +18,15 @@
     "@web3modal/wagmi": "^5.1.11",
     "ethers": "^6.13.0",
     "viem": "^2.21.54",
-    "vue": "^3.4.21"
+    "vue": "^3.5.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "~5.3.3",
+    "typescript": "^5.7.2",
     "vite": "^5.1.4",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^2.2.0"
   }
 }
